libs/modkit/tests/ui/no_response.stderr
error[E0599]: no method named `register` found for struct `modkit::OperationBuilder<Present, Missing, ()>` in the current scope
  --> tests/ui/no_response.rs:25:10
   |
22 |       let _ = OperationBuilder::<_, _, ()>::get("/test")
   |  _____________-
23 | |         .summary("Test endpoint")
24 | |         .handler(test_handler)
25 | |         .register(router, &registry);
   | |         -^^^^^^^^ method not found in `modkit::OperationBuilder<Present, Missing, ()>`
   | |_________|
   |
   |
   = note: the method was found for
           - `modkit::OperationBuilder<Present, Present, S>`
